// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 1`] = `
<div>
  <div
    class="sc-nVkyK bAimuD"
  >
    <div
      class="sc-dFtzxp fjFdHi"
    >
      Completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 2`] = `
<div>
  <div
    class="sc-nVkyK bAimuD"
  >
    <div
      class="sc-jIkXHa dalaVP"
    >
      <div
        class="sc-jOxtWs kKpAzU"
      >
        Max column width:
        <input
          class="sc-hmjpVf llfjiP"
          max="3"
          min="3"
          type="range"
          value="70"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView displays bodyMessage if no rows 1`] = `
<div>
  <div
    class="sc-cCcXHH mrwwL"
  >
    <div
      class="sc-gGCDDS PcZps"
    >
      (no changes, no records)
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView does not display bodyMessage if rows 1`] = `
<div>
  <div
    class="sc-cCcXHH mrwwL"
  >
    <pre
      class="sc-hiwPVj iojdYu"
    >
      ╒═══╕
│"x"│
╞═══╡
│"y"│
└───┘
    </pre>
  </div>
</div>
`;
